--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	font-family: 'Lexend Deca';
 }
 ol, ul {
 	list-style: none;
